# crocore

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_build.yml  cmake_build_macos.yml  cmake_build_windows.yml
include/crocore/: Allocator.hpp  Animation.hpp  Application.hpp  Area.hpp  BuddyPool.hpp  Cache.hpp  CircularBuffer.hpp  Component.hpp  Connection.hpp  Easing.hpp  Image.hpp  Logger.hpp  MemoryCache.hpp  NamedId.hpp  NamedUUID.hpp  Property.hpp  Serial.hpp  SetLRU.h  SetLRU.hpp  ThreadPool.hpp  ThreadPoolClassic.hpp  Timer.hpp  Utils.hpp  crocore.hpp  define_class_ptr.hpp  file_functions.hpp  filesystem.hpp  fixed_size_free_list.h  fixed_size_free_list.inl  gaussian.hpp  http.hpp  json.hpp  networking.hpp  precise_sleep.hpp  serializer.hpp  set_lru.hpp  utils.hpp
src/: Animation.cpp  Application.cpp  BuddyPool.cpp  CMakeLists.txt  Component.cpp  Image.cpp  Logger.cpp  MemoryCache.cpp  Property.cpp  Serial.cpp  ThreadPool.cpp  Timer.cpp  file_functions.cpp  filesystem.cpp  http.cpp  networking.cpp  serializer.cpp  stb_image.h  stb_image_write.h
src/tests/: testApplication.cpp  testBuddyPool.cpp  testCircularBuffer.cpp  testProperty.cpp  testThreadPool.cpp
tests/: CMakeLists.txt  TestMemoryCache.cpp  TestNamedId.cpp  TestNamedUUID.cpp  testApplication.cpp  testBuddyPool.cpp  testCircularBuffer.cpp  testThreadPool.cpp  testThreadPoolClassic.cpp  test_set_lru.cpp  test_stl_allocator.cpp
